--- a/study-form/package.json
+++ b/study-form/package.json
@@ -8,10 +8,9 @@
     "react-scripts": "1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "start": "set PORT=3006 && react-scripts start"
+    "eject": "react-scripts eject"
   }
 }
