--- a/ch03/package.json
+++ b/ch03/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tsuyoshiwada/htmltojsx": "0.0.5",
     "react": "^16.2.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
