--- a/ch02/package.json
+++ b/ch02/package.json
@@ -8,6 +8,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
     "uuid": "^3.2.1"
   },
   "scripts": {
