--- a/ch06-spotify/package.json
+++ b/ch06-spotify/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "ch05-blog",
+  "name": "ch06-spotify",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0"
   },
   "scripts": {
-	"start" : "set PORT=3006 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
