--- a/ch07-task-manager/package.json
+++ b/ch07-task-manager/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^5.3.0",
     "react": "^16.4.1",
+    "react-bs-notifier": "^5.0.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
