--- a/demo-upload-image/package.json
+++ b/demo-upload-image/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-antd-layout",
+  "name": "demo-upload-image",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.1.4",
+    "antd": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
